Update codebase based on latest dist.yaml
