# server/openapi_server/models/text_annotation_all_of.py
@@ -1,0 +1,122 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class TextAnnotationAllOf(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, start=None, length=None, text=None):  # noqa: E501
+        """TextAnnotationAllOf - a model defined in OpenAPI
+
+        :param start: The start of this TextAnnotationAllOf.  # noqa: E501
+        :type start: int
+        :param length: The length of this TextAnnotationAllOf.  # noqa: E501
+        :type length: int
+        :param text: The text of this TextAnnotationAllOf.  # noqa: E501
+        :type text: str
+        """
+        self.openapi_types = {
+            'start': int,
+            'length': int,
+            'text': str
+        }
+
+        self.attribute_map = {
+            'start': 'start',
+            'length': 'length',
+            'text': 'text'
+        }
+
+        self._start = start
+        self._length = length
+        self._text = text
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TextAnnotationAllOf':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The TextAnnotation_allOf of this TextAnnotationAllOf.  # noqa: E501
+        :rtype: TextAnnotationAllOf
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def start(self):
+        """Gets the start of this TextAnnotationAllOf.
+
+        The position of the first character  # noqa: E501
+
+        :return: The start of this TextAnnotationAllOf.
+        :rtype: int
+        """
+        return self._start
+
+    @start.setter
+    def start(self, start):
+        """Sets the start of this TextAnnotationAllOf.
+
+        The position of the first character  # noqa: E501
+
+        :param start: The start of this TextAnnotationAllOf.
+        :type start: int
+        """
+
+        self._start = start
+
+    @property
+    def length(self):
+        """Gets the length of this TextAnnotationAllOf.
+
+        The length of the annotation  # noqa: E501
+
+        :return: The length of this TextAnnotationAllOf.
+        :rtype: int
+        """
+        return self._length
+
+    @length.setter
+    def length(self, length):
+        """Sets the length of this TextAnnotationAllOf.
+
+        The length of the annotation  # noqa: E501
+
+        :param length: The length of this TextAnnotationAllOf.
+        :type length: int
+        """
+
+        self._length = length
+
+    @property
+    def text(self):
+        """Gets the text of this TextAnnotationAllOf.
+
+        The string annotated  # noqa: E501
+
+        :return: The text of this TextAnnotationAllOf.
+        :rtype: str
+        """
+        return self._text
+
+    @text.setter
+    def text(self, text):
+        """Sets the text of this TextAnnotationAllOf.
+
+        The string annotated  # noqa: E501
+
+        :param text: The text of this TextAnnotationAllOf.
+        :type text: str
+        """
+
+        self._text = text
